2003-01-11  Bernhard Held <bernhard@bernhardheld.de>

	* .version: Bumped version number to 2.3.3
	* src/SDCCBBlock.c: new option -o
	* src/SDCCglobl.h: new option -o
	* src/SDCCglue.c: new option -o
	* src/SDCCmain.c: new option -o
	* src/asm.c: new option -o
	* src/ds390/main.c: new option -o
	* src/pic/glue.c: new option -o
	* src/pic/pcode.c: new option -o
	* src/pic/ralloc.c: new option -o
	* src/pic16/glue.c: new option -o
	* src/pic16/pcode.c: new option -o
	* src/pic16/ralloc.c: new option -o
	* src/z80/main.c: new option -o
	* device/lib/Makefile.in: use -o
	* support/regression/ports/ds390/spec.mk: use -o
	* support/regression/ports/gbz80/spec.mk: use -o
	* support/regression/ports/mcs51/spec.mk: use -o
	* support/regression/ports/mcs51-stack-auto/spec.mk: use -o
	* support/regression/ports/z80/spec.mk: use -o
	* support/regression/ports/ucz80/spec.mk: use -o
	* support/regression/ports/xa51/spec.mk: use -o
	* support/regression/fwk/lib/timeout.c: fix usage string

2003-01-09  Bernhard Held <bernhard@bernhardheld.de>
	* src/mcs51/gen.c (genPlus): replaced "mov b,acc" by "mov b,a" Fiorenzo D. Ramaglia <fd.ramaglia@tin.it>
	
2003-01-07    <johan@balder>

	* src/SDCCast.c (decorateType): fixed bug #600035

2003-01-07  Bernhard Held <bernhard@bernhardheld.de>
	* as/mcs51/lkmem.c: added several l-modifiers to printf to remove warnings
	* as/mcs51/lkaomf51.c: #include <ctype.h> to remove warnings
	* src/pic/main.c (_hasNativeMulFor): outcommented unused variables to remove warnings
	* src/pic/pcode.c: outcommented unused variable to remove warnings
	* src/pic/ralloc.c: outcommented unused variable to remove warnings

2003-01-06    <karl@turbobit.com>
	* sim/ucsim/cmd.src/command.cc: fixed so "break xram r 0x7654" works again in
   regression tests.

2003-01-06    <johan@balder>

	* src/SDCCicode.c: fixed array add

2002-01-05  Bernhard Held <bernhard@bernhardheld.de>
	* src/SDCCmacro.c: MAX_STRING_LENGTH increased to 2048; was too small for regression tests